fix blog item image issue on smaller viewports

--- a/css/blogstyle.scss
+++ b/css/blogstyle.scss
@@ -67,8 +67,7 @@ a {
     margin-bottom: 0.2em;
   }
 
-  .blog-hero_card { 
-
+  .blog-hero_card {
     .blog-item {
       display: flex;
       flex-direction: column;
@@ -178,7 +177,6 @@ a {
     }
     .blog-item {
       margin: 2em 2.5rem;
-      box-shadow: 0 0px 0px 3px rgba(255, 255, 255, 0.2);
       padding: 0.3em;
     }
   }
@@ -204,7 +202,7 @@ a {
     }
     .blog-item {
       margin: 2em 1rem;
-      box-shadow: 0 0px 0px 3px rgba(255, 255, 255, 0.2);
+
       padding: 0.3em;
     }
   }
